--- a/src/app/top-nav/top-nav.component.html
+++ b/src/app/top-nav/top-nav.component.html
@@ -41,6 +41,11 @@
     ></mat-icon>
   </div>
 
+    <div class="new-consultation" (click)="openNurse()" *ngIf="configService?.config?.nurseExternalLink">
+       <span>{{ 'topNav.new_consultation_form' | translate }}</span>
+        <mat-icon svgIcon="in-new-tab"></mat-icon>
+    </div>
+
   <div
     *ngIf="!showCloseConsBtn"
     (click)="acceptNextConsultation()"
