refs #6268, Add new allowed mimetype parameters in backend

--- a/src/app/chat/chat.component.html
+++ b/src/app/chat/chat.component.html
@@ -395,7 +395,7 @@
                 #fileInput
                 style="display: none;"
                 type="file"
-                accept="application/pdf,image/jpeg,image/png,image/gif"
+                [accept]="acceptAll ? '*' :'application/pdf,image/jpeg,image/png,image/gif'"
                 (change)="handleFileInput($event)"
             />
 
