--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,7 +5,7 @@
 }
 
 .sidenav {
-  z-index: 1 !important;
+  z-index: 9 !important;
   width: 100px;
 }
 
@@ -111,4 +111,11 @@ mat-list-item {
 .logo {
   width: 50px;
   max-width: 100% !important;
+}
+
+.content {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
