custom pagination and date-time picker

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
               svgIcon="history"
               [matBadge]="''"
               matBadgePosition="after"
-              matBadgeColor="danger"
+              matBadgeColor="warn"
             ></mat-icon>
             <span class="btn-text">{{
               "app.consultationHistory" | translate
@@ -90,7 +90,7 @@
               svgIcon="invite"
               [matBadge]="''"
               matBadgePosition="after"
-              matBadgeColor="danger"
+              matBadgeColor="warn"
             ></mat-icon>
             <span class="btn-text">{{ "app.invites" | translate }}</span>
           </button>
