--- a/src/app/invite-form/invite-form.component.html
+++ b/src/app/invite-form/invite-form.component.html
@@ -243,22 +243,13 @@
                     </div>
 
                     <div class="field-container" style="margin-top: 14px !important">
-                        <mat-form-field class="schedule" *ngIf="schedule">
-                            <mat-label class="label">{{
-                                "inviteForm.scheduledAt" | translate
-                                }}</mat-label>
-                            <input
-                                    formControlName="dateTimeFormControl"
-                                    [owlDateTime]="dt1"
-                                    [owlDateTimeTrigger]="dt1"
-                                    [placeholder]="translate.instant('inviteForm.dateTime')"
-                                    [(ngModel)]="data.scheduledFor"
-                                    matInput
-                                    autocomplete="off"
-                                    [min]="now"
-                            />
-                            <owl-date-time #dt1></owl-date-time>
-                        </mat-form-field>
+                        <ng-container *ngIf="schedule">
+                            <mat-label class="label">{{"inviteForm.scheduledAt" | translate }}</mat-label>
+
+                            <app-date-time-picker (dateTimeSelected)="onDateTimeSelected($event)"></app-date-time-picker>
+
+                        </ng-container>
+
                     </div>
                     <div *ngIf="error" class="error">
                         {{ error }}
