--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -3,7 +3,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmSU5fCRc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmSU5fCRc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -11,7 +11,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmSU5fCBc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmSU5fCBc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -27,7 +27,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmSU5fBxc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmSU5fBxc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -35,7 +35,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmSU5fCxc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmSU5fCxc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -43,7 +43,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmSU5fChc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmSU5fChc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -51,7 +51,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmSU5fBBc4AMP6lQ.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmSU5fBBc4AMP6lQ.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -59,7 +59,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/KFOmCnqEu92Fr1Mu72xKKTU1Kvnz.woff2') format('woff2');
+  src: url('./KFOmCnqEu92Fr1Mu72xKKTU1Kvnz.woff2') format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -67,7 +67,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/KFOmCnqEu92Fr1Mu5mxKKTU1Kvnz.woff2') format('woff2');
+  src: url('./KFOmCnqEu92Fr1Mu5mxKKTU1Kvnz.woff2') format('woff2');
   unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -75,7 +75,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/KFOmCnqEu92Fr1Mu7mxKKTU1Kvnz.woff2') format('woff2');
+  src: url('./KFOmCnqEu92Fr1Mu7mxKKTU1Kvnz.woff2') format('woff2');
   unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -83,7 +83,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/KFOmCnqEu92Fr1Mu4WxKKTU1Kvnz.woff2') format('woff2');
+  src: url('./KFOmCnqEu92Fr1Mu4WxKKTU1Kvnz.woff2') format('woff2');
   unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -91,7 +91,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/KFOmCnqEu92Fr1Mu7WxKKTU1Kvnz.woff2') format('woff2');
+  src: url('./KFOmCnqEu92Fr1Mu7WxKKTU1Kvnz.woff2') format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -99,7 +99,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/KFOmCnqEu92Fr1Mu7GxKKTU1Kvnz.woff2') format('woff2');
+  src: url('./KFOmCnqEu92Fr1Mu7GxKKTU1Kvnz.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -107,7 +107,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2') format('woff2');
+  src: url('./KFOmCnqEu92Fr1Mu4mxKKTU1Kg.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* cyrillic-ext */
@@ -115,7 +115,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmEU9fCRc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmEU9fCRc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
 }
 /* cyrillic */
@@ -123,7 +123,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmEU9fABc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmEU9fABc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0301, U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 /* greek-ext */
@@ -131,7 +131,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmEU9fCBc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmEU9fCBc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+1F00-1FFF;
 }
 /* greek */
@@ -139,7 +139,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmEU9fBxc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmEU9fBxc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0370-03FF;
 }
 /* vietnamese */
@@ -147,7 +147,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmEU9fCxc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmEU9fCxc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0102-0103, U+0110-0111, U+0128-0129, U+0168-0169, U+01A0-01A1, U+01AF-01B0, U+0300-0301, U+0303-0304, U+0308-0309, U+0323, U+0329, U+1EA0-1EF9, U+20AB;
 }
 /* latin-ext */
@@ -155,7 +155,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmEU9fChc4AMP6lbBP.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmEU9fChc4AMP6lbBP.woff2') format('woff2');
   unicode-range: U+0100-02AF, U+0304, U+0308, U+0329, U+1E00-1E9F, U+1EF2-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -163,7 +163,7 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: url('assets/fonts/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.woff2') format('woff2');
+  src: url('./KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.woff2') format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
@@ -172,10 +172,10 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: url('assets/fonts/flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2') format('woff2');
+  src: url('./flUhRq6tzZclQEJ-Vdg-IuiaDsNcIhQ8tQ.woff2') format('woff2');
 }
 
-.material-icons {
+.mat-icon {
   font-family: 'Material Icons';
   font-weight: normal;
   font-style: normal;
