--- a/src/app/consultations/consultations.component.html
+++ b/src/app/consultations/consultations.component.html
@@ -12,7 +12,7 @@
     [icon]="title.icon"
   ></app-top-nav>
 
-    <div class="desc" style="display: flex; justify-content: space-between; width: 90%">
+    <div class="desc">
     <h2
       style="display: inline;"
       [matBadge]="
@@ -23,32 +23,21 @@
     >
       {{ title.title | uppercase }}
     </h2>
-        <mat-form-field *ngIf="queues.length > 0">
-            <mat-label class="label">{{
-                    "inviteForm.waitingQueue" | translate
-                }}
-            </mat-label>
-            <mat-select
-                    (ngModelChange)="onSelectQueue($event)"
-                    [(ngModel)]="queue"
-            >
-                <mat-option [value]="undefined">{{
-                        "inviteForm.mySelf" | translate
-                    }}
-                </mat-option>
-                <span>
-                <mat-option *ngFor="let queue of queues" [value]="queue.id">
-                  {{ queue.name }}
-                </mat-option>
-              </span>
-            </mat-select>
-        </mat-form-field>
+
   </div>
 
   <div>
     <h4 class="noCon" *ngIf="!consultations.length">
       {{ "consultations.noConsultation" | translate }}
     </h4>
+      <div class="filters-wrapper">
+          <button mat-raised-button #filterButton (click)="openFilterModal()">
+              <mat-icon svgIcon="filter" class="filter-icon"></mat-icon>
+              More Filters
+              <app-badge *ngIf="appLiedFiltersCount" [text]="appLiedFiltersCount"></app-badge>
+
+          </button>
+      </div>
 
     <table class="consultations" *ngIf="consultations.length">
       <tr (click)="showChat(consultation._id)"
