--- a/src/app/custom-pagination/custom-pagination.component.html
+++ b/src/app/custom-pagination/custom-pagination.component.html
@@ -1,13 +1,13 @@
 <nav aria-label="Page navigation" *ngIf="pageNumbers.length">
     <ul class="pagination">
         <li class="page-item"  [class.disabled]="currentPage === 1">
-            <a class="page-link" (click)="previousPage(); $event.preventDefault()"><mat-icon svgIcon="next"></mat-icon></a>
+            <a class="page-link" (click)="previousPage(); $event.preventDefault()"><mat-icon class="prev-icon" svgIcon="next"></mat-icon></a>
         </li>
         <li class="page-item" *ngFor="let pageNumber of pageNumbers" [class.active]="currentPage === pageNumber">
             <a class="page-link" href="#" (click)="changePage(pageNumber); $event.preventDefault()">{{ pageNumber }}</a>
         </li>
         <li class="page-item" [class.disabled]="currentPage === totalPages">
-            <a class="page-link"  (click)="nextPage(); $event.preventDefault()"> <mat-icon svgIcon="next"></mat-icon> </a>
+            <a class="page-link"  (click)="nextPage(); $event.preventDefault()"> <mat-icon class="next-icon" svgIcon="next"></mat-icon> </a>
         </li>
     </ul>
 </nav>
