--- a/src/app/filter-modal/filter-modal.component.scss
+++ b/src/app/filter-modal/filter-modal.component.scss
@@ -5,3 +5,13 @@
 .label {
   color: black;
 }
+
+.clear-btn {
+  margin-bottom: 1rem;
+}
+
+.apply-button {
+  background-color: var(--primary-color);
+  color: #ffffff;
+
+}
