--- a/src/app/invitations/invitations.component.scss
+++ b/src/app/invitations/invitations.component.scss
@@ -13,7 +13,10 @@ span.tile-header {
   width: 50%;
 }
 
-// <div style="text-align:center;line-height:100%;width:33%;height:100%;">Text Content</div>
+.edit-button {
+  margin-top: 10px;
+}
+
 .pdf-table {
   margin: auto;
   font-size: 40px;
