--- a/src/app/invite-form/invite-form.component.scss
+++ b/src/app/invite-form/invite-form.component.scss
@@ -96,7 +96,7 @@
   color: #ffffff;
 }
 .btn_submit {
-  background-color: var(--app-green);
+  background-color: var(--primary-color);
   color: #ffffff;
 }
 
