--- a/src/app/invitations/invitations.component.html
+++ b/src/app/invitations/invitations.component.html
@@ -215,7 +215,7 @@
                             <mat-spinner [diameter]="35"></mat-spinner>
                         </div>
                         <button
-                                class="secondary-button-outlined"
+                                class="primary-button btn__cancel"
                                 *ngIf="!invite.revoking"
                                 (click)="revokeInvite(invite.id)"
                                 mat-raised-button
