--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -107,6 +107,13 @@ table {
     font-weight: 400;
   }
 }
+.invite-btn {
+  margin-left: 20px;
+  background-color: var(--primary-color);
+  color: #ffffff;
+  border-radius: 50px;
+  font-size: 12px;
+}
 .active-consultations {
   .unread,
   .arrow {
