fix copy expert link

--- a/src/app/invite-expoert/invite-expert.component.html
+++ b/src/app/invite-expoert/invite-expert.component.html
@@ -61,7 +61,7 @@
                         />
                     </mat-form-field>
 
-                    <mat-icon svgIcon="copy" (click)="copy()" [cdkCopyToClipboard]="data"></mat-icon>
+                    <mat-icon svgIcon="copy" (click)="copy()" [cdkCopyToClipboard]="data.expertLink"></mat-icon>
                 </div>
 
                 <button mat-button (click)="onNoClick()" type="button">
